Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5624

mysqldump --dump-slave option does not restart the replication if the dump has failed

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.35
    • 5.5.36
    • None
    • Debian Wheezy amd64

    Description

      Using the --dump-slave option of mysqldump stops the replication at the beginning of the dump and restarts it once its done but if the dump fails for any reason (if the database does not exists or the user doesnt have enough permission on it for example), the replication is not restarted at the end of the process.

      To reproduce, use a user with the REPLICATION SLAVE grant (and check that the replication is running prior) :

      # mysqldump -udumpuser -pXXX -hSERVER --dump-slave NONEXISTINGDB > /dev/null
      mysqldump: Got error: 1044: "Access denied for user 'dumpuser'@'192.168.1.23' to database 'NONEXISTINGDB'" when selecting the database

      The slave replication is now stopped (Slave_SQL_Running = No).

      ps: i havent tested if a similar issue exists with --master-data.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            jb-boin Jean Weisbuch
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.