MDEV-5624 mysqldump --dump-slave option does not restart the replication if the dump has failed